# A3-IA-RETAIL

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: README.md
scripts/: run_pipeline.py
src/a3_ia_retail/: __init__.py  __main__.py  association.py  basket.py  clustering.py  comparison.py  config.py  data_loading.py  eda.py  pipeline.py  preprocessing.py  similarity.py
tests/: test_clustering.py  test_preprocessing.py
